--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <textarea type='text'
               class="w-full bg-transparent border-b-4 border-solid border-orange-400 hover:border-white focus:border-white outline-none"></textarea>
           </label>
-          <button class="bg-orange-400 mt-2 p-1 shadow text-white font-bold hover:transition-opacity hover:opacity-60"
+          <button class="bg-orange-400 mt-2 p-1 shadow text-white font-bold hover:transition-colors hover:text-orange-400 hover:bg-white"
             type="submit">SUBMIT</button>
 
         </form>
